# capsule-memory

./: .env.example  .gitignore  404.html  LICENSE  NOTICE  README.md  capsule-schema.json  conftest.py  demo.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
README_zh/: index.html
api-reference/: index.html
api-reference_zh/: index.html
attribution/: index.html
attribution_zh/: index.html
capsule_memory/: __init__.py  api.py  cli.py  exceptions.py
capsule_memory/adapters/: __init__.py  anthropic.py  base.py  langchain.py  llamaindex.py  openai.py  raw.py
capsule_memory/core/: builder.py  extractor.py  llm_utils.py  memory_compressor.py  session.py  skill_detector.py  skill_refiner.py  store.py
capsule_memory/models/: __init__.py  capsule.py  events.py  memory.py  skill.py
capsule_memory/notifier/: __init__.py  base.py  callback.py  cli.py  multi.py  webhook.py
capsule_memory/server/: __init__.py  mcp_server.py  rest_api.py
capsule_memory/storage/: __init__.py  base.py  local.py  qdrant_store.py  redis_store.py  sqlite.py
capsule_memory/transport/: crypto.py  schema_validator.py  serializer.py
changelog/: index.html
changelog_zh/: index.html
concepts/: index.html
concepts_zh/: index.html
docs/: README_zh.md  api-reference.md  api-reference_zh.md  attribution.md  attribution_zh.md  capsule-schema.json  changelog.md  changelog_zh.md  concepts.md  concepts_zh.md  index.md  index_zh.md  quickstart.md  quickstart_zh.md
docs/integrations/: auto-memory.md  auto-memory_zh.md  langchain.md  langchain_zh.md  llamaindex.md  llamaindex_zh.md  mcp.md  mcp_zh.md  openai.md  openai_zh.md  rest-api.md  rest-api_zh.md  widget.md  widget_zh.md
examples/: integrate_coze.md  integrate_coze_zh.md  integrate_dify.md  integrate_dify_zh.md  integrate_langchain.py  integrate_openai_direct.py  mcp_setup.md  mcp_setup_zh.md  multi_agent_example.py  quickstart_claude.py  zero_code_migration.md  zero_code_migration_zh.md
index_zh/: index.html
integrations/auto-memory/: index.html
integrations/auto-memory_zh/: index.html
integrations/langchain/: index.html
integrations/langchain_zh/: index.html
integrations/llamaindex/: index.html
integrations/llamaindex_zh/: index.html
integrations/mcp/: index.html
integrations/mcp_zh/: index.html
integrations/openai/: index.html
quickstart/: index.html
quickstart_zh/: index.html
sdk-js/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
search/: search_index.json
stylesheets/: extra.css
(+46 files in other folders)
