[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "capsule-memory"
version = "0.1.1"
description = "User-sovereign AI memory capsule system with skill extraction"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Xuelin Xu", email = "2656655820@qq.com" },
]
keywords = ["ai", "memory", "capsule", "llm", "skill-extraction", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "msgpack>=1.0",
    "rich>=13.0",
    "aiofiles>=23.0",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/Musenn/capsule-memory"
Repository = "https://github.com/Musenn/capsule-memory"
Documentation = "https://Musenn.github.io/capsule-memory"

[project.optional-dependencies]
llm = ["litellm>=1.0"]
crypto = ["cryptography>=41.0"]
webhook = ["httpx>=0.27"]
sqlite = ["sqlite-vec>=0.1.6", "sentence-transformers>=2.7"]
redis = ["redis>=5.0"]
qdrant = ["qdrant-client>=1.7"]
server = ["fastapi>=0.110", "uvicorn>=0.27", "python-multipart>=0.0.9", "httpx>=0.27"]
mcp = ["mcp>=1.0"]
llamaindex = ["llama-index-core>=0.10"]
all = [
    "litellm>=1.0",
    "cryptography>=41.0",
    "httpx>=0.27",
    "sqlite-vec>=0.1.6", "sentence-transformers>=2.7",
    "redis>=5.0", "qdrant-client>=1.7",
    "fastapi>=0.110", "uvicorn>=0.27", "python-multipart>=0.0.9",
    "mcp>=1.0",
]
docs = ["mkdocs-material>=9.5"]
dev = [
    "pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0",
    "ruff>=0.4", "mypy>=1.10", "respx>=0.21",
    "python-dotenv>=1.0",
]

[project.scripts]
capsule-memory = "capsule_memory.cli:app"
capsule-memory-mcp = "capsule_memory.server.mcp_server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"
markers = [
    "integration: marks tests that require external services or real LLM API calls",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
